--- a/day-3/vue.html
+++ b/day-3/vue.html
@@ -38,10 +38,11 @@
     <input v-model="message"/>
 </div>
 <script type="text/javascript">
-    var data = {Message: "Hello World"}
     var vm = new Vue({
         el : "#app",
-        data : data
+        data : {
+            Message: "Hello World"
+        }
     });
     var app2 = new Vue({
         el: '#app-2',
